# rust-todo

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust.yaml
.github/workflows/: build.yml  docker-publish.yml
src/: auth.rs  db.rs  main.rs  models.rs
