[package]
name = "rust-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time"] }
time = { version = "0.3", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
tower = "0.4"
dotenv = "0.15"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
